# Scholar-Pulse

./: .dockerignore  .env.example  .gitignore  Dockerfile.dashboard  Makefile  README.html  README.md  alembic.ini  context.md  docker-compose.yml  prefect.yaml  pyproject.toml
.github/workflows/: deploy-pages.yml
app_google/: README.md
app_google/src/: App.tsx  data.ts
apps/dashboard/: __init__.py  app.py  callbacks.py  components.py  constants.py  data_access.py  factory.py  figures.py  ids.py  layout.py  logic.py  panels.py  taxonomy.py  view_models.py
apps/dashboard-web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
apps/dashboard_api/: main.py  serializers.py  service.py
apps/web/: README.md  next.config.ts  package-lock.json  package.json
docs/: ARCHITECTURE.md  INGESTION_COLAB_SETUP.md  PRODUCT_DIRECTION.md  REPO_STRUCTURE.md
infra/colab/: README.md
pipelines/common/: files.py  hash_utils.py  logging_utils.py  settings.py  snapshot.py
pipelines/db/: init_db.py  migrate.py  models.py  session.py  upsert.py
pipelines/embeddings/: colab_embed.py  export_colab.py  import_colab.py  local_embed_loop.py  manifest.py
pipelines/enrichment/: sync.py
pipelines/ingestion/: arxiv_utils.py  bulk_backfill.py  cli.py  client.py  kaggle_import.py  progress.py  quality_report.py  service.py  storage.py  types.py
pipelines/orchestration/: flows.py  local_refresh.py
pipelines/publish/: dashboard_feeds.py
pipelines/similarity/: build_index.py  query.py
pipelines/space/: build.py
scripts/: fetch_recent_papers.py
tests/: conftest.py
tests/e2e/: test_smoke_ingest_export_import.py
tests/integration/: test_dashboard_publish.py  test_export_since.py  test_incremental_resume.py  test_ingestion_idempotency.py  test_manifest_validation.py
(+88 files in other folders)
