[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholarpulse"
version = "0.1.0"
description = "Deterministic scientific frontier intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "ScholarPulse"}]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "pandas>=2.2",
  "pyarrow>=17.0",
  "numpy>=1.26",
  "python-dateutil>=2.9",
  "tenacity>=9.0",
  "requests>=2.32",
  "feedparser>=6.0",
  "zstandard>=0.23",
]

[project.optional-dependencies]
dashboard = [
  "dash>=2.18",
  "plotly>=5.24",
]
orchestration = [
  "prefect>=2.19",
]
analytics = [
  "scikit-learn>=1.5",
  "umap-learn>=0.5.6",
  "hdbscan>=0.8.37",
  "bertopic>=0.16.3",
  "scipy>=1.14",
]
embeddings = [
  "torch>=2.4",
  "transformers>=4.44",
]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.11",
  "types-requests>=2.32",
]

[tool.setuptools]
packages = [
  "pipelines",
  "pipelines.common",
  "pipelines.db",
  "pipelines.ingestion",
  "pipelines.embeddings",
  "pipelines.clustering",
  "pipelines.metrics",
  "pipelines.publish",
  "pipelines.orchestration",
  "apps.dashboard",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
plugins = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
